--- a/client/static/partials/dashboard.html
+++ b/client/static/partials/dashboard.html
@@ -1,4 +1,7 @@
 <div class="row">
+	<input class="input-field col s2" ng-model="searchText.question" id="search" class="form-control" placeholder="Filter text">
+</div>
+<div class="row">
     <table>
         <thead>
             <tr>
@@ -8,7 +11,7 @@
             </tr>
         </thead>
         <tbody>
-            <tr ng-repeat="question in questions">
+            <tr ng-repeat="question in questions | filter: searchText:strict">
                 <td ng-bind="question.question"></td>
 				<td ng-bind="question.answers"></td>
 				<td><a ng-click="show(question._id)" href="">Show</a> <a ng-click="answer(question._id)" href="">Answer</a></td>
